# dixonstat

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  CITATION.cff  README.md  pyproject.toml  requirements.txt
.github/workflows/: linux.yml  wheels.yml
dixonstat/: __about__.py  __init__.py  __main__.py  _quadrature.py  _ratio.py
docs/: conf.py  index.rst  license.rst  references.bib  usage.rst
scripts/: compare_benchmarks.py
tests/: test_compare_benchmarks.py  test_module.py  test_quadrature.py  test_ratio.py
