[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dixonstat"
dynamic = ["version"]
description = "Computing the critical values of a Dixon's r statistic"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
keywords = ["dixon's q test, dixon's r statistic"]
authors = [
  { name = "Sergiu Deitsch", email = "sergiu.deitsch@gmail.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    'numpy',
    'scipy',
]

[project.urls]
Documentation = "https://dixonstat.readthedocs.io"
Issues = "https://github.com/sergiud/dixonstat/issues"
Source = "https://github.com/sergiud/dixonstat"

[tool.hatch.version]
path = "dixonstat/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/dixonstat tests}"

[tool.coverage.run]
source_pkgs = ["dixonstat"]
branch = true
parallel = true
omit = [
  "dixonstat/__about__.py",
]

[tool.coverage.paths]
dixonstat = ["dixonstat"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.black]
skip-string-normalization = true

[tool.isort]
profile = 'black'
force_single_line = true
from_first = true
no_sections = true
order_by_type = false

[tool.pytest.ini_options]
xfail_strict = true
addopts = [
    '--import-mode=importlib',
]
